tempo avant la réponse + personnalisation des interlocuteurs

--- a/helloworld.html
+++ b/helloworld.html
@@ -20,7 +20,7 @@
 					<div class="content">
 						<div class="text-content" >
 						</div>
-						<input type="text" id="discussionInput" name="message"  placeholder="saisissez votre message..." text="coucou">
+						<input type="text" id="discussionInput" name="message"  placeholder="saisissez votre message..." text="coucou" autocomplete="off">
 						<input type="submit" id="submitMsg" value='Soumettre'>
 						<input type="hidden" name="user" value="Nicolas M.">
 					</div>
